# src/api/endpoints/__init__.py
@@ -1,6 +1,6 @@
 from api.endpoints.auth import router as auth_router  # noqa
 from api.endpoints.booking import router as booking_router  # noqa
-from api.endpoints.cafe import router as cafe_router  # noqa
+from api.endpoints.venue import router as venue_router  # noqa
 from api.endpoints.dish import router as dish_router  # noqa
 from api.endpoints.media import router as media_router  # noqa
 from api.endpoints.slot import router as slot_router  # noqa
